# course_work_5

./: README.md  config.py  db_manager.py  main.py  pyproject.toml  utils.py
