[tool.poetry]
name = "course-work-5"
version = "0.1.0"
description = ""
authors = ["dmitriyalushkin <pantific37@mail.ru>"]
readme = "README.md"
packages = [{include = "course_work_5"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
